# shorts-generation-service

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  setup.cfg  setup.py
editor/: main.py
llm/: main.py
server/: main.py
tests/: test_sanitycheck.py
transcription/: main.py  models.py
utils/: colours.py  emoji_test.py  fonts.py  scrape_emoji.py  utils.py
yt/: main.py
