[tool.poetry]
name = "transcribe-service"
version = "0.1.0"
description = ""
authors = ["Paulius Dovidaitis <paulius.dovidaitis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.0.0"
pre-commit = "^3.6.1"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
