[tool.poetry]
name = "transcribe-service"
version = "0.1.0"
description = ""
authors = ["Paulius Dovidaitis <paulius.dovidaitis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.0.0"
pre-commit = "^3.6.1"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
openai = "^1.12.0"
requests = "^2.31.0"
python-multipart = "^0.0.9"
moviepy = "^1.0.3"
ruff = "^0.4.4"
instructor = "^1.2.6"
backoff = "^2.2.1"
pilmoji = "^2.0.4"
pytube = "^15.0.0"
opencv-python = "^4.9.0.80"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
